--- a/pages/bad-turnip.html
+++ b/pages/bad-turnip.html
@@ -20,7 +20,7 @@
 	<article class="intro">
 		<strong>Bad Turnip</strong>
 		<p>
-			Ces visuels ont été réalisés pour le jeune et talentueux "Bad Turnip". Un artiste qui mélange des sonorités rock et techno afin de donner une musique que l'on qualifierait d'unique. Je travail toujours avec lui pour les "EP" à venir. Nous avons réfléchis ensemble à son nom de scène ainsi qu'à son logo. "Bad Turnip" signifie "mauvais navet" en référene à "mauvaise graine", expression qui illustre son état d'esprit actuel. De plus "Turnip" fais aussi référence à "Turn up", expression utilisé de nos jours pour qualifier un événement festif. Je vous laisse apprécier ça musique en cliquant sur le navet si dessous.
+			Ces visuels ont été réalisés pour le jeune et talentueux "Bad Turnip". Un artiste qui mélange des sonorités rock et techno afin de donner une musique que l'on qualifierait d'unique. Je travail toujours avec lui pour les "EP" à venir. Nous avons réfléchis ensemble à son nom de scène ainsi qu'à son logo. "Bad Turnip" signifie "mauvais navet" en référene à "mauvaise graine", expression qui illustre son état d'esprit actuel. De plus "Turnip" fais aussi référence à "Turn up", expression utilisé de nos jours pour qualifier un événement festif. Je vous laisse apprécier sa musique en cliquant sur le navet si dessous.
 		</p>
 	</article>
 	<article class="wrap">
